<resources>
    <string name="app_name">MobileID</string>
    <string name="menuAbout">About</string>
    <string name="msgSystemInfo">System Information</string>
    <string name="aboutTaisys">Powered by Taisys Holding Co. Ltd. \nAll rights reserved.</string>
    <string name="menuRegistration">Certificate Registration</string>
    <string name="menuMyCertificate">My Certificate</string>
    <string name="menuReport">Authentication History</string>
    <string name="menuChangePin">Change PIN Code</string>
    <string name="menuAuthentication">Service Authentication</string>
    <string name="labelEnterIdCardNumber">Please enter your phone number (*)</string>
    <string name="labelEnterPinCode">Please enter PIN code of Mobile ID (*)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="msgRegistrationInProgress">Registration in progress.</string>
    <string name="msgCheckCardAvailability">Check card availability</string>
    <string name="msgReadCardInfo">Read card information</string>
    <string name="msgDoesntSupportOti">Unable to communicate with card, please ensure you have inserted the card.</string>
    <string name="msgCannotReadCardInfo">Unable to get card information, please ensure you have inserted the correct card.</string>
    <string name="msgPleaseEnterPinCode">Please enter PIN code.</string>
    <string name="msgPleaseEnterNewPinCode">Please enter new PIN code.</string>
    <string name="msgNewPinCodeIsTooShort">The minimum length of PIN code is six.</string>
    <string name="msgPleaseEnterNewPinCodeAgain">Please enter new PIN code again.</string>
    <string name="msgNewPinCodesAreNotTheSame">New PIN codes are not the same.</string>
    <string name="msgChangePinCodeInProgress">Change PIN code in progress.</string>
    <string name="msgVerifyPinCode">Verify PIN code.</string>
    <string name="msgPinCodeIsIncorrect">The PIN code is incorrect, please enter valid PIN code.</string>
    <string name="msgPleaseEnterIdCardNumber">Please enter your phone number</string>
    <string name="msgCannotFindFcmToken">Unable to find push notification token, please re-install the APP and try again.</string>
    <string name="msgSendRegistrationRequest">Generate digital signature and process registration data.</string>
    <string name="msgFailToCommunicateWithServer">Fail to communicate with server.</string>
    <string name="msgUnableToParseServerResponseData">Unable to parse response data sent from server.</string>
    <string name="msgProcessFailed">Process failed.</string>
    <string name="msgProcessSucceeded">The job is successfully processed.</string>
    <string name="labelCompanyName">Company name: </string>
    <string name="labelServiceName">Service name: </string>
    <string name="labelAutheticationMessageContent">Message: </string>
    <string name="msgUnableToGetIccid">Unable to obtain card information, please regiter your certificate.</string>
    <string name="msgUnableToGetIdCardNumber">Unable to obtain phone number, please regiter your certificate.</string>
    <string name="msgCreatingSignature">Creating signature in progress.</string>
    <string name="labelMyCertSerialNumber">Serial number: </string>
    <string name="labelMyCertCertOwner">Owner name: </string>
    <string name="labelMyCertIssueDate">Issue date: </string>
    <string name="labelMyCertExpiryDate">Expiry date: </string>
    <string name="labelMyCertStatus">Status: </string>
    <string name="msgDataUpdateInProgress">Data update in progress</string>
    <string name="labelEnterCurrentPinCode">Please enter current PIN code (*) </string>
    <string name="labelEnterNewPinCode">Please enter new PIN code, 6~12 characters (*) </string>
    <string name="labelEnterNewPinCodeAgain">Please re-enter new PIN code (*) </string>
    <string name="msgUnableToCreatePublicKeyFile">Unable to create public key file</string>
    <string name="msgUnableToCreatePrivateKeyFile">Unable to create private key file</string>
    <string name="msgUnableToGenerateRsaKeyPair">Unable to generate RSA key pair</string>
    <string name="msgFailToReadPublicKey">Failed to read public key</string>
    <string name="msgUnableToGenerateRsaSignature">Unable to generate RSA signature</string>
</resources>

