<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taisys.sc.mobileid.RegistrationActivity"
    android:background="#F0E3DD"
    android:orientation="vertical">

    <TextView
        android:text="@string/menuRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textRegistrationTitle"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/labelEnterIdCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/labelEnterIdCard" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="A123456789"
        android:ems="20"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextRegistationIdCardNumber" />

    <TextView
        android:text="@string/labelEnterPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/labelEnterPinCode" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextRegistrationPinCode"
        android:text="111111"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegistrationConfirm"
            android:layout_weight="0.37" />

        <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegistrationCancel"
            android:layout_weight="0.37" />
    </LinearLayout>

</LinearLayout>
