<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pin_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taisys.sc.mobileid.ChangePinCodeActivity"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/menuChangePin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/textChangePinCodeTitle"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:text="@string/labelEnterCurrentPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/labelChangePinCodeEnterCurrentPinCode" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:layout_marginTop="10dp"
                android:id="@+id/editTextChangePinCodeCurrentPinCode"
                android:text=""
                android:inputType="textPassword" />

            <TextView
                android:text="@string/labelEnterNewPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/labelChangePinCodeEnterNewPinCode" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:layout_marginTop="10dp"
                android:id="@+id/editTextChangePinCodeNewPinCode"
                android:text=""
                android:inputType="textPassword" />

            <TextView
                android:text="@string/labelEnterNewPinCodeAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/labelChangePinCodeEnterNewPinCode2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:layout_marginTop="10dp"
                android:id="@+id/editTextChangePinCodeNewPinCode2"
                android:text=""
                android:inputType="textPassword" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp">

                <Button
                    android:text="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonChangePinCodeConfirm"
                    android:layout_weight="0.37" />

                <Button
                    android:text="@android:string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonChangePinCodeCancel"
                    android:layout_weight="0.37" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
